md/parser.automaton
State 0:
chapter' -> . chapter [ # ]
-- On chapter shift to state 1
-- On boxes shift to state 2
-- On WORD reduce production boxes -> 
-- On PERCENT reduce production boxes -> 
-- On O_SQ_BRACKET reduce production boxes -> 
-- On O_CURLY reduce production boxes -> 
-- On KW_CHAPTER reduce production boxes -> 
-- On ENV reduce production boxes -> 
-- On COMMENT_LINE reduce production boxes -> 
-- On BACKSLASH reduce production boxes -> 

State 1:
chapter' -> chapter . [ # ]
-- On # accept chapter

State 2:
boxes -> boxes . box [ WORD PERCENT O_SQ_BRACKET O_CURLY KW_CHAPTER ENV COMMENT_LINE BACKSLASH ]
chapter -> boxes . mk_heading(KW_CHAPTER) label block paragraphs mk_sections(section) EOF [ # ]
-- On WORD shift to state 3
-- On PERCENT shift to state 4
-- On O_SQ_BRACKET shift to state 5
-- On O_CURLY shift to state 7
-- On KW_CHAPTER shift to state 26
-- On ENV shift to state 9
-- On COMMENT_LINE shift to state 11
-- On BACKSLASH shift to state 12
-- On word shift to state 19
-- On sq_box shift to state 20
-- On mk_heading(KW_CHAPTER) shift to state 28
-- On env shift to state 21
-- On curly_box shift to state 22
-- On box shift to state 23
-- On blob shift to state 24

State 3:
word -> WORD . [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD reduce production word -> WORD 
-- On REFSOL reduce production word -> WORD 
-- On PERCENT reduce production word -> WORD 
-- On O_SQ_BRACKET reduce production word -> WORD 
-- On O_CURLY reduce production word -> WORD 
-- On KW_SUBSUBSECTION reduce production word -> WORD 
-- On KW_SUBSECTION reduce production word -> WORD 
-- On KW_SECTION reduce production word -> WORD 
-- On KW_PARAGRAPH reduce production word -> WORD 
-- On KW_LABEL_AND_NAME reduce production word -> WORD 
-- On KW_END_GROUP reduce production word -> WORD 
-- On KW_END_ATOM reduce production word -> WORD 
-- On KW_CODE_ATOM reduce production word -> WORD 
-- On KW_CHAPTER reduce production word -> WORD 
-- On KW_BEGIN_GROUP reduce production word -> WORD 
-- On KW_BEGIN_ATOM reduce production word -> WORD 
-- On ILIST reduce production word -> WORD 
-- On HINT reduce production word -> WORD 
-- On EOF reduce production word -> WORD 
-- On ENV reduce production word -> WORD 
-- On C_SQ_BRACKET reduce production word -> WORD 
-- On C_CURLY reduce production word -> WORD 
-- On COMMENT_LINE reduce production word -> WORD 
-- On BACKSLASH reduce production word -> WORD 

State 4:
word -> PERCENT . [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD reduce production word -> PERCENT 
-- On REFSOL reduce production word -> PERCENT 
-- On PERCENT reduce production word -> PERCENT 
-- On O_SQ_BRACKET reduce production word -> PERCENT 
-- On O_CURLY reduce production word -> PERCENT 
-- On KW_SUBSUBSECTION reduce production word -> PERCENT 
-- On KW_SUBSECTION reduce production word -> PERCENT 
-- On KW_SECTION reduce production word -> PERCENT 
-- On KW_PARAGRAPH reduce production word -> PERCENT 
-- On KW_LABEL_AND_NAME reduce production word -> PERCENT 
-- On KW_END_GROUP reduce production word -> PERCENT 
-- On KW_END_ATOM reduce production word -> PERCENT 
-- On KW_CODE_ATOM reduce production word -> PERCENT 
-- On KW_CHAPTER reduce production word -> PERCENT 
-- On KW_BEGIN_GROUP reduce production word -> PERCENT 
-- On KW_BEGIN_ATOM reduce production word -> PERCENT 
-- On ILIST reduce production word -> PERCENT 
-- On HINT reduce production word -> PERCENT 
-- On EOF reduce production word -> PERCENT 
-- On ENV reduce production word -> PERCENT 
-- On C_SQ_BRACKET reduce production word -> PERCENT 
-- On C_CURLY reduce production word -> PERCENT 
-- On COMMENT_LINE reduce production word -> PERCENT 
-- On BACKSLASH reduce production word -> PERCENT 

State 5:
sq_box -> O_SQ_BRACKET . boxes C_SQ_BRACKET [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_DEPEND KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On boxes shift to state 6
-- On WORD reduce production boxes -> 
-- On PERCENT reduce production boxes -> 
-- On O_SQ_BRACKET reduce production boxes -> 
-- On O_CURLY reduce production boxes -> 
-- On ENV reduce production boxes -> 
-- On C_SQ_BRACKET reduce production boxes -> 
-- On COMMENT_LINE reduce production boxes -> 
-- On BACKSLASH reduce production boxes -> 

State 6:
boxes -> boxes . box [ WORD PERCENT O_SQ_BRACKET O_CURLY ENV C_SQ_BRACKET COMMENT_LINE BACKSLASH ]
sq_box -> O_SQ_BRACKET boxes . C_SQ_BRACKET [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_DEPEND KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD shift to state 3
-- On PERCENT shift to state 4
-- On O_SQ_BRACKET shift to state 5
-- On O_CURLY shift to state 7
-- On ENV shift to state 9
-- On C_SQ_BRACKET shift to state 25
-- On COMMENT_LINE shift to state 11
-- On BACKSLASH shift to state 12
-- On word shift to state 19
-- On sq_box shift to state 20
-- On env shift to state 21
-- On curly_box shift to state 22
-- On box shift to state 23
-- On blob shift to state 24

State 7:
curly_box -> O_CURLY . boxes C_CURLY [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On boxes shift to state 8
-- On WORD reduce production boxes -> 
-- On PERCENT reduce production boxes -> 
-- On O_SQ_BRACKET reduce production boxes -> 
-- On O_CURLY reduce production boxes -> 
-- On ENV reduce production boxes -> 
-- On C_CURLY reduce production boxes -> 
-- On COMMENT_LINE reduce production boxes -> 
-- On BACKSLASH reduce production boxes -> 

State 8:
boxes -> boxes . box [ WORD PERCENT O_SQ_BRACKET O_CURLY ENV C_CURLY COMMENT_LINE BACKSLASH ]
curly_box -> O_CURLY boxes . C_CURLY [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD shift to state 3
-- On PERCENT shift to state 4
-- On O_SQ_BRACKET shift to state 5
-- On O_CURLY shift to state 7
-- On ENV shift to state 9
-- On C_CURLY shift to state 10
-- On COMMENT_LINE shift to state 11
-- On BACKSLASH shift to state 12
-- On word shift to state 19
-- On sq_box shift to state 20
-- On env shift to state 21
-- On curly_box shift to state 22
-- On box shift to state 23
-- On blob shift to state 24

State 9:
env -> ENV . [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD reduce production env -> ENV 
-- On REFSOL reduce production env -> ENV 
-- On PERCENT reduce production env -> ENV 
-- On O_SQ_BRACKET reduce production env -> ENV 
-- On O_CURLY reduce production env -> ENV 
-- On KW_SUBSUBSECTION reduce production env -> ENV 
-- On KW_SUBSECTION reduce production env -> ENV 
-- On KW_SECTION reduce production env -> ENV 
-- On KW_PARAGRAPH reduce production env -> ENV 
-- On KW_LABEL_AND_NAME reduce production env -> ENV 
-- On KW_END_GROUP reduce production env -> ENV 
-- On KW_END_ATOM reduce production env -> ENV 
-- On KW_CODE_ATOM reduce production env -> ENV 
-- On KW_CHAPTER reduce production env -> ENV 
-- On KW_BEGIN_GROUP reduce production env -> ENV 
-- On KW_BEGIN_ATOM reduce production env -> ENV 
-- On ILIST reduce production env -> ENV 
-- On HINT reduce production env -> ENV 
-- On EOF reduce production env -> ENV 
-- On ENV reduce production env -> ENV 
-- On C_SQ_BRACKET reduce production env -> ENV 
-- On C_CURLY reduce production env -> ENV 
-- On COMMENT_LINE reduce production env -> ENV 
-- On BACKSLASH reduce production env -> ENV 

State 10:
curly_box -> O_CURLY boxes C_CURLY . [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On REFSOL reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On PERCENT reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On O_SQ_BRACKET reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On O_CURLY reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On KW_SUBSUBSECTION reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On KW_SUBSECTION reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On KW_SECTION reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On KW_PARAGRAPH reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On KW_LABEL_AND_NAME reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On KW_END_GROUP reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On KW_END_ATOM reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On KW_CODE_ATOM reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On KW_CHAPTER reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On KW_BEGIN_GROUP reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On KW_BEGIN_ATOM reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On ILIST reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On HINT reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On EOF reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On ENV reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On C_SQ_BRACKET reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On C_CURLY reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On COMMENT_LINE reduce production curly_box -> O_CURLY boxes C_CURLY 
-- On BACKSLASH reduce production curly_box -> O_CURLY boxes C_CURLY 

State 11:
word -> COMMENT_LINE . [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD reduce production word -> COMMENT_LINE 
-- On REFSOL reduce production word -> COMMENT_LINE 
-- On PERCENT reduce production word -> COMMENT_LINE 
-- On O_SQ_BRACKET reduce production word -> COMMENT_LINE 
-- On O_CURLY reduce production word -> COMMENT_LINE 
-- On KW_SUBSUBSECTION reduce production word -> COMMENT_LINE 
-- On KW_SUBSECTION reduce production word -> COMMENT_LINE 
-- On KW_SECTION reduce production word -> COMMENT_LINE 
-- On KW_PARAGRAPH reduce production word -> COMMENT_LINE 
-- On KW_LABEL_AND_NAME reduce production word -> COMMENT_LINE 
-- On KW_END_GROUP reduce production word -> COMMENT_LINE 
-- On KW_END_ATOM reduce production word -> COMMENT_LINE 
-- On KW_CODE_ATOM reduce production word -> COMMENT_LINE 
-- On KW_CHAPTER reduce production word -> COMMENT_LINE 
-- On KW_BEGIN_GROUP reduce production word -> COMMENT_LINE 
-- On KW_BEGIN_ATOM reduce production word -> COMMENT_LINE 
-- On ILIST reduce production word -> COMMENT_LINE 
-- On HINT reduce production word -> COMMENT_LINE 
-- On EOF reduce production word -> COMMENT_LINE 
-- On ENV reduce production word -> COMMENT_LINE 
-- On C_SQ_BRACKET reduce production word -> COMMENT_LINE 
-- On C_CURLY reduce production word -> COMMENT_LINE 
-- On COMMENT_LINE reduce production word -> COMMENT_LINE 
-- On BACKSLASH reduce production word -> COMMENT_LINE 

State 12:
word -> BACKSLASH . BACKSLASH [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
word -> BACKSLASH . O_CURLY [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
word -> BACKSLASH . C_CURLY [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
word -> BACKSLASH . O_SQ_BRACKET [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
word -> BACKSLASH . C_SQ_BRACKET [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
word -> BACKSLASH . WORD [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD shift to state 13
-- On O_SQ_BRACKET shift to state 14
-- On O_CURLY shift to state 15
-- On C_SQ_BRACKET shift to state 16
-- On C_CURLY shift to state 17
-- On BACKSLASH shift to state 18

State 13:
word -> BACKSLASH WORD . [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD reduce production word -> BACKSLASH WORD 
-- On REFSOL reduce production word -> BACKSLASH WORD 
-- On PERCENT reduce production word -> BACKSLASH WORD 
-- On O_SQ_BRACKET reduce production word -> BACKSLASH WORD 
-- On O_CURLY reduce production word -> BACKSLASH WORD 
-- On KW_SUBSUBSECTION reduce production word -> BACKSLASH WORD 
-- On KW_SUBSECTION reduce production word -> BACKSLASH WORD 
-- On KW_SECTION reduce production word -> BACKSLASH WORD 
-- On KW_PARAGRAPH reduce production word -> BACKSLASH WORD 
-- On KW_LABEL_AND_NAME reduce production word -> BACKSLASH WORD 
-- On KW_END_GROUP reduce production word -> BACKSLASH WORD 
-- On KW_END_ATOM reduce production word -> BACKSLASH WORD 
-- On KW_CODE_ATOM reduce production word -> BACKSLASH WORD 
-- On KW_CHAPTER reduce production word -> BACKSLASH WORD 
-- On KW_BEGIN_GROUP reduce production word -> BACKSLASH WORD 
-- On KW_BEGIN_ATOM reduce production word -> BACKSLASH WORD 
-- On ILIST reduce production word -> BACKSLASH WORD 
-- On HINT reduce production word -> BACKSLASH WORD 
-- On EOF reduce production word -> BACKSLASH WORD 
-- On ENV reduce production word -> BACKSLASH WORD 
-- On C_SQ_BRACKET reduce production word -> BACKSLASH WORD 
-- On C_CURLY reduce production word -> BACKSLASH WORD 
-- On COMMENT_LINE reduce production word -> BACKSLASH WORD 
-- On BACKSLASH reduce production word -> BACKSLASH WORD 

State 14:
word -> BACKSLASH O_SQ_BRACKET . [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On REFSOL reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On PERCENT reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On O_SQ_BRACKET reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On O_CURLY reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On KW_SUBSUBSECTION reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On KW_SUBSECTION reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On KW_SECTION reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On KW_PARAGRAPH reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On KW_LABEL_AND_NAME reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On KW_END_GROUP reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On KW_END_ATOM reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On KW_CODE_ATOM reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On KW_CHAPTER reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On KW_BEGIN_GROUP reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On KW_BEGIN_ATOM reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On ILIST reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On HINT reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On EOF reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On ENV reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On C_SQ_BRACKET reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On C_CURLY reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On COMMENT_LINE reduce production word -> BACKSLASH O_SQ_BRACKET 
-- On BACKSLASH reduce production word -> BACKSLASH O_SQ_BRACKET 

State 15:
word -> BACKSLASH O_CURLY . [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD reduce production word -> BACKSLASH O_CURLY 
-- On REFSOL reduce production word -> BACKSLASH O_CURLY 
-- On PERCENT reduce production word -> BACKSLASH O_CURLY 
-- On O_SQ_BRACKET reduce production word -> BACKSLASH O_CURLY 
-- On O_CURLY reduce production word -> BACKSLASH O_CURLY 
-- On KW_SUBSUBSECTION reduce production word -> BACKSLASH O_CURLY 
-- On KW_SUBSECTION reduce production word -> BACKSLASH O_CURLY 
-- On KW_SECTION reduce production word -> BACKSLASH O_CURLY 
-- On KW_PARAGRAPH reduce production word -> BACKSLASH O_CURLY 
-- On KW_LABEL_AND_NAME reduce production word -> BACKSLASH O_CURLY 
-- On KW_END_GROUP reduce production word -> BACKSLASH O_CURLY 
-- On KW_END_ATOM reduce production word -> BACKSLASH O_CURLY 
-- On KW_CODE_ATOM reduce production word -> BACKSLASH O_CURLY 
-- On KW_CHAPTER reduce production word -> BACKSLASH O_CURLY 
-- On KW_BEGIN_GROUP reduce production word -> BACKSLASH O_CURLY 
-- On KW_BEGIN_ATOM reduce production word -> BACKSLASH O_CURLY 
-- On ILIST reduce production word -> BACKSLASH O_CURLY 
-- On HINT reduce production word -> BACKSLASH O_CURLY 
-- On EOF reduce production word -> BACKSLASH O_CURLY 
-- On ENV reduce production word -> BACKSLASH O_CURLY 
-- On C_SQ_BRACKET reduce production word -> BACKSLASH O_CURLY 
-- On C_CURLY reduce production word -> BACKSLASH O_CURLY 
-- On COMMENT_LINE reduce production word -> BACKSLASH O_CURLY 
-- On BACKSLASH reduce production word -> BACKSLASH O_CURLY 

State 16:
word -> BACKSLASH C_SQ_BRACKET . [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On REFSOL reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On PERCENT reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On O_SQ_BRACKET reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On O_CURLY reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On KW_SUBSUBSECTION reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On KW_SUBSECTION reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On KW_SECTION reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On KW_PARAGRAPH reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On KW_LABEL_AND_NAME reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On KW_END_GROUP reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On KW_END_ATOM reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On KW_CODE_ATOM reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On KW_CHAPTER reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On KW_BEGIN_GROUP reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On KW_BEGIN_ATOM reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On ILIST reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On HINT reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On EOF reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On ENV reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On C_SQ_BRACKET reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On C_CURLY reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On COMMENT_LINE reduce production word -> BACKSLASH C_SQ_BRACKET 
-- On BACKSLASH reduce production word -> BACKSLASH C_SQ_BRACKET 

State 17:
word -> BACKSLASH C_CURLY . [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD reduce production word -> BACKSLASH C_CURLY 
-- On REFSOL reduce production word -> BACKSLASH C_CURLY 
-- On PERCENT reduce production word -> BACKSLASH C_CURLY 
-- On O_SQ_BRACKET reduce production word -> BACKSLASH C_CURLY 
-- On O_CURLY reduce production word -> BACKSLASH C_CURLY 
-- On KW_SUBSUBSECTION reduce production word -> BACKSLASH C_CURLY 
-- On KW_SUBSECTION reduce production word -> BACKSLASH C_CURLY 
-- On KW_SECTION reduce production word -> BACKSLASH C_CURLY 
-- On KW_PARAGRAPH reduce production word -> BACKSLASH C_CURLY 
-- On KW_LABEL_AND_NAME reduce production word -> BACKSLASH C_CURLY 
-- On KW_END_GROUP reduce production word -> BACKSLASH C_CURLY 
-- On KW_END_ATOM reduce production word -> BACKSLASH C_CURLY 
-- On KW_CODE_ATOM reduce production word -> BACKSLASH C_CURLY 
-- On KW_CHAPTER reduce production word -> BACKSLASH C_CURLY 
-- On KW_BEGIN_GROUP reduce production word -> BACKSLASH C_CURLY 
-- On KW_BEGIN_ATOM reduce production word -> BACKSLASH C_CURLY 
-- On ILIST reduce production word -> BACKSLASH C_CURLY 
-- On HINT reduce production word -> BACKSLASH C_CURLY 
-- On EOF reduce production word -> BACKSLASH C_CURLY 
-- On ENV reduce production word -> BACKSLASH C_CURLY 
-- On C_SQ_BRACKET reduce production word -> BACKSLASH C_CURLY 
-- On C_CURLY reduce production word -> BACKSLASH C_CURLY 
-- On COMMENT_LINE reduce production word -> BACKSLASH C_CURLY 
-- On BACKSLASH reduce production word -> BACKSLASH C_CURLY 

State 18:
word -> BACKSLASH BACKSLASH . [ WORD REFSOL PERCENT O_SQ_BRACKET O_CURLY KW_SUBSUBSECTION KW_SUBSECTION KW_SECTION KW_PARAGRAPH KW_LABEL_AND_NAME KW_END_GROUP KW_END_ATOM KW_CODE_ATOM KW_CHAPTER KW_BEGIN_GROUP KW_BEGIN_ATOM ILIST HINT EOF ENV C_SQ_BRACKET C_CURLY COMMENT_LINE BACKSLASH ]
-- On WORD reduce production word -> BACKSLASH BACKSLASH 
-- On REFSOL reduce production word -> BACKSLASH BACKSLASH 
-- On PERCENT reduce production word -> BACKSLASH BACKSLASH 
-- On O_SQ_BRACKET reduce production word -> BACKSLASH BACKSLASH 
-- On O_CURLY reduce production word -> BACKSLASH BACKSLASH 
-- On KW_SUBSUBSECTION reduce production word -> BACKSLASH BACKSLASH 
-- On KW_SUBSECTION reduce production word -> BACKSLASH BACKSLASH 
-- On KW_SECTION reduce production word -> BACKSLASH BACKSLASH 
-- On KW_PARAGRAPH reduce production word -> BACKSLASH BACKSLASH 
-- On KW_LABEL_AND_NAME reduce production word -> BACKSLASH BACKSLASH 
-- On KW_END_GROUP reduce production word -> BACKSLASH BACKSLASH 
-- On KW_END_ATOM reduce production word -> BACKSLASH BACKSLASH 
-- On KW_CODE_ATOM reduce production word -> BACKSLASH BACKSLASH 
-- On KW_CHAPTER reduce production word -> BACKSLASH BACKSLASH 
-- On KW_BEGIN_GROUP reduce production word -> BACKSLASH BACKSLASH 
-- On KW_BEGIN_ATOM reduce production word -> BACKSLASH BACKSLASH 
-- On ILIST reduce production word -> BACKSLASH BACKSLASH 
-- On HINT reduce production word -> BACKSLASH BACKSLASH 
-- On EOF reduce production word -> BACKSLASH BACKSLASH 
-- On ENV reduce production word -> BACKSLASH BACKSLASH 
-- On C_SQ_BRACKET reduce production word -> BACKSLASH BACKSLASH 
-- On C_CURLY reduce production word -> BACKSLASH BACKSLASH 
-- On COMMENT_LINE reduce production word -> BACKSLASH BACKSLASH 
-- On BACKSLASH reduce production word -> BACKSLASH BACKSLASH 
